--- a/amazon.html
+++ b/amazon.html
@@ -70,11 +70,25 @@
     <img src="smart.png" alt="Watches" width="30%">
     </a>
 </div>
-<div class="shirt">
+<div>
   <a href="https://www.amazon.in/b/?_encoding=UTF8&node=1983518031&pd_rd_w=Gcfei&content-id=amzn1.sym.6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_p=6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_r=5R7N00QN5JMGYTJPP2HK&pd_rd_wg=zdE1O&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&ref_=pd_gw_unk">
-    <img src="shoes.png" alt="Shoes" width="50%">
+    <img src="shoes.png" alt="Shoes" width="20%">
+  </a>
+</div>
+<div>
+  <a href="https://www.amazon.in/b/?_encoding=UTF8&node=2454169031&pd_rd_w=Gcfei&content-id=amzn1.sym.6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_p=6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_r=5R7N00QN5JMGYTJPP2HK&pd_rd_wg=zdE1O&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&ref_=pd_gw_unk">
+    <img src="bag.png" alt="bag" width="30%">
+  </a>
+</div>
+<div>
+  <a href="https://www.amazon.in/Laptops/b?ie=UTF8&node=1375424031&ref_=sd_allcat_sbc_mobcomp_laptops">
+    <img src="laptop.avif" alt="laptop" width="30%">
+  </a>
+</div>
+<div>
+  <a href="https://www.amazon.in/s?bbn=81107432031&rh=n%3A81107432031%2Cp_85%3A10440599031&_encoding=UTF8&content-id=amzn1.sym.1c82c58f-ba94-4c7f-addd-8abb3f123860&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&pd_rd_w=TSbMx&pd_rd_wg=zdE1O&pf_rd_p=1c82c58f-ba94-4c7f-addd-8abb3f123860&pf_rd_r=5R7N00QN5JMGYTJPP2HK&ref=pd_gw_unk">
+    <img src="fridge.png" alt="air" width="40%"> 
   </a>
 </div>
 </body>
 </html>
-  
