--- a/amazon.html
+++ b/amazon.html
@@ -43,6 +43,9 @@
     padding: 15px;
     margin: 15px 15px 15px 15px;
   }
+  .center {
+    text-align: center;
+  }
 </style>
 </head>
 <body>
@@ -61,31 +64,37 @@
   <a href="signin.html" class="signin">Sign In</a>
 </div>
 <div class="shirt">
+  <h3>Fashions</h3>
     <a href="https://www.amazon.in/b/?_encoding=UTF8&node=15325111031&pd_rd_w=FRwmg&content-id=amzn1.sym.f12dd8dc-1053-46cc-abee-1b9caca7cf79&pf_rd_p=f12dd8dc-1053-46cc-abee-1b9caca7cf79&pf_rd_r=5R7N00QN5JMGYTJPP2HK&pd_rd_wg=8yMQ8&pd_rd_r=1fa738c7-c28b-447a-9060-1c8f2a4e725c">
         <img src="fashion.png" alt="fashion" width="35%">
     </a>
 </div>
 <div>
+  <h3>Smart Watches</h3>
     <a href="https://www.amazon.in/s?hidden-keywords=B0B3RRWSF6+%7C+B0B5B6PQCT+%7C+B0BF57RN3K+%7C+B0B6BLTGTT+%7C+B0B854R7NS+%7C+B0B5LVS732+%7C+B0BJ72WZQ7+%7C+B09NVPSCQT+%7C+B0B53QFZPY+%7C+B0B3RSDSZ3+%7C+B0B5DDJNH4+%7C+B0BP18W8TM+%7C+B0BF563HB4+%7C+B09V12K8NT+%7C+B09YV4MW2T+%7C+B0B5LW5DFQ+%7C+B0B6BPX5S9+%7C+B09YV42QHZ+%7C+B0B5LWP12T+%7C+B0BF4YBLPX+%7C+B0BRJF98R9+%7C+B0B53NXFFR+%7C+B09RK7XWQS+%7C+B0BBVKRP7B+%7C+B0BMM4MBT2&_encoding=UTF8&content-id=amzn1.sym.120c97ab-3ac1-45d5-b3b8-e0713526c217&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&pd_rd_w=icO1O&pd_rd_wg=zdE1O&pf_rd_p=120c97ab-3ac1-45d5-b3b8-e0713526c217&pf_rd_r=5R7N00QN5JMGYTJPP2HK&ref=pd_gw_unk">
     <img src="smart.png" alt="Watches" width="30%">
     </a>
 </div>
 <div>
+  <h3>Shoes</h3>
   <a href="https://www.amazon.in/b/?_encoding=UTF8&node=1983518031&pd_rd_w=Gcfei&content-id=amzn1.sym.6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_p=6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_r=5R7N00QN5JMGYTJPP2HK&pd_rd_wg=zdE1O&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&ref_=pd_gw_unk">
     <img src="shoes.png" alt="Shoes" width="20%">
   </a>
 </div>
 <div>
+  <h3>Bags</h3>
   <a href="https://www.amazon.in/b/?_encoding=UTF8&node=2454169031&pd_rd_w=Gcfei&content-id=amzn1.sym.6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_p=6aee623a-6ef7-4fb1-958c-89f308cb539e&pf_rd_r=5R7N00QN5JMGYTJPP2HK&pd_rd_wg=zdE1O&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&ref_=pd_gw_unk">
     <img src="bag.png" alt="bag" width="30%">
   </a>
 </div>
 <div>
+  <h3>Laptops</h3>
   <a href="https://www.amazon.in/Laptops/b?ie=UTF8&node=1375424031&ref_=sd_allcat_sbc_mobcomp_laptops">
     <img src="laptop.avif" alt="laptop" width="30%">
   </a>
 </div>
 <div>
+  <h3>Refrigerators</h3>
   <a href="https://www.amazon.in/s?bbn=81107432031&rh=n%3A81107432031%2Cp_85%3A10440599031&_encoding=UTF8&content-id=amzn1.sym.1c82c58f-ba94-4c7f-addd-8abb3f123860&pd_rd_r=bb3643e5-69a4-4e66-a5d5-f8bb4b58dbad&pd_rd_w=TSbMx&pd_rd_wg=zdE1O&pf_rd_p=1c82c58f-ba94-4c7f-addd-8abb3f123860&pf_rd_r=5R7N00QN5JMGYTJPP2HK&ref=pd_gw_unk">
     <img src="fridge.png" alt="air" width="40%"> 
   </a>
